[tool.poetry]
name = "gha-test"
version = "0.1.0"
description = "codellm-devkit: A python library for seamless integration with LLMs."
authors = ["Joe Tester"]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/rofrano/gha-test"
repository = "https://github.com/rofrano/gha-test"
keywords = ["igha"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]
include = [
    "LICENSE",
    "cldk/analysis/java/codeanalyzer/jar/codeanalyzer.jar"
]

[tool.poetry.dependencies]
python = ">=3.11"
pydantic = "^2.6.1"
pandas = "^2.2.0"
networkx = "^3.3"
pyarrow = "17.0.0"
tree-sitter-languages = "^1.10.2"
tree-sitter = "0.23.0"
rich = "13.7.1"
wget = "3.2"
requests = "^2.31.0"
tree-sitter-java = "0.23.2"
tree-sitter-c = "0.23.1"
tree-sitter-go = "0.23.1"
tree-sitter-python = "0.23.2"
tree-sitter-javascript = "0.23.0"
# Test dependencies

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
pytest = "8.3.3"
ipdb = "^0.13.13"
jupyter = "^1.0.0"

# Documentation
mkdocs = "1.6.1"
mkdocstrings = "0.26.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 180

[tool.cldk.testing]
sample-application = "tests/resources/java/application/"
sample-application-analysis-json = "tests/resources/java/analysis_json/slim"
codeanalyzer-jar-path = "tests/resources/java/codeanalyzer/build/libs/"
